@@ -492,7 +492,7 @@ then
 			# the LiveCD rootfs
 			good_msg 'Locating the SGI LiveCD Root Partition'
 			echo ' ' | \
-				losetup -o $(/bin/getdvhoff "${NEW_ROOT}${REAL_ROOT}" 0) \
+				losetup -o $(getdvhoff "${NEW_ROOT}${REAL_ROOT}" 0) \
 					"${NEW_ROOT}${CDROOT_DEV}" \
 					"${NEW_ROOT}${REAL_ROOT}"
 			test_success 'losetup /dev/sr0 /dev/loop0'
