@@ -365,7 +365,7 @@ CONFIG_FREERAMDISK=y
 # CONFIG_MKFS_MINIX is not set
 # CONFIG_FEATURE_MINIX2 is not set
 # CONFIG_GETOPT is not set
-# CONFIG_HEXDUMP is not set
+CONFIG_HEXDUMP=y
 # CONFIG_HWCLOCK is not set
 # CONFIG_FEATURE_HWCLOCK_LONGOPTIONS is not set
 # CONFIG_FEATURE_HWCLOCK_ADJTIME_FHS is not set
