@@ -370,7 +370,7 @@ CONFIG_FREERAMDISK=y
 # CONFIG_FSCK_MINIX is not set
 # CONFIG_MKFS_MINIX is not set
 # CONFIG_GETOPT is not set
-# CONFIG_HEXDUMP is not set
+CONFIG_HEXDUMP=y
 # CONFIG_HWCLOCK is not set
 CONFIG_LOSETUP=y
 CONFIG_MDADM=y
